--- a/atelje-by-m/package.json
+++ b/atelje-by-m/package.json
@@ -2,15 +2,18 @@
   "name": "atelje-by-m",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/andreagylling/Atelje_byM",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "node ./node_modules/vue-gh-pages/index.js"
   },
   "dependencies": {
     "core-js": "^2.6.5",
     "showdown": "^1.9.0",
     "vue": "^2.6.10",
+    "vue-gh-pages": "^1.19.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
